# odcs_data_contracts

./: .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt
.github/scripts/: set_env_vars.sh
.github/workflows/: deploy_datacontract.yaml  deploy_datacontract_wf.yaml
dashboards/: UC Lineage Dashboard.lvdash.json
examples/contracts/: odcs_data_contract.yaml
examples/contracts_yaml_examples/: open_data_contract.yaml
examples/create_mock_data/: create_mock_data1.ipynb  create_mock_data2.ipynb
examples/dbricks_workflow_examples/: data_contract_create_example.yml  data_contract_deploy_example.yml
examples/flight_demo_input_data/: base_params.yaml  create_flight_demo_data.py
examples/input_files_contracts_examples/: input.sql
my_first_odcs_contract/: 0 - generate_odcs_contract.ipynb  1 - add_data_quality_sql_rules.ipynb  data_contract_helper_functions.py
my_first_odcs_contract/odcs_data_contract/: odcs_data_contract.yaml
notebooks/: data_contract_lint.py  helpers.ipynb  helpers.py  s0_data_contract_author_metadata.py  s0_data_contract_generate.py  s1 - data_contract_generate.py  s1_data_contract_generate.py  s2_data_contract_deploy_tables.py  s3 - data_contract_deploy_data.py  s3_data_contract_deploy_data.py  s3_data_contract_deploy_metadata.py  s3_data_contract_deploy_tables.py  s3_data_contract_deploy_tags.py  s4_data_contract_deploy_data.py  s4_data_contract_dq_checks.py  s5_data_contract_deploy_tags.py  s5_data_contract_dq_checks.py
notebooks/contract_metadata_input/: contract_metadata.json
notebooks/dqx/: DQX.ipynb  (+1 more)
(+69 files in other folders)
