[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contract_validation"
version = "0.1.0"
description = "Contract validation package"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["contract_validation"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]